quicktips/index-data/local.css
span.tip {
	font-weight: normal;
}
dl p {
	margin-left: 0;
	margin-right: 0;
}
dl dl {
	margin-left: 0px;
	margin-right: 0px;
}
dd {
	margin-left: 0;
}
.tipdl {
	margin-top: 3em;
	margin-bottom: .5em;
	margin-left: -10px;
	text-align: left;
	background-color: #ffe;
	border: 1px solid #CCC;
	box-shadow: 7px 7px 5px #888;
	padding: 5px 10px 5px 15px;
	border-radius: 10px;
}
dt a:link {
	color: black;
}
dt a:visited {
	color: black;
}

